# dotfiles

./: .Xdefaults  .Xmodmap  .ackrc  .asoundrc  .bashrc  .clang-format  .ctags  .dircolors  .fonts.conf  .gitconfig  .gitignore  .gitignore.global  .gitignore_global  .gitmodules  .inputrc  .mpdconf  .mpdnotify  .pentadactylrc  .profile  .screenrc  .tmux.conf  .vimrc  .vimrc.lite  .xinitrc  .zshrc  Makefile  Memo.pandoc  README  README.md
.emacs.d/: init.el
.fonts/: Consolas.dfont  Dinabold-16.bdf  DinaboldItalic-16.bdf  Dinamedium-16.bdf  DinamediumItalic-16.bdf
.mpd/: mpd.conf
.mplayer/: config
.mpv/: bifrost-int.vpy  bifrost-test.vpy  bifrost.vpy  config  deband.glsl  deband.py  deband.vpy  dither.vpy  f3kdb.vpy  fm-bff.vpy  fm.vpy  input.conf  mvtools.vpy  nnedi3.vpy  spline64.vpy  upscale.py  upscale.vpy  upscale420.vpy  vinverse.vpy
.mpv/lua-settings/: osc.conf  stats.conf
.mpv/pre-scalers/: nnedi3.glsl  super-xbr.glsl
.mpv/scripts/: stats.lua
.ncmpcpp/: config
.pentadactyl/: bookmarks
.ssh/: config
.urxvt/ext/: clipboard  fullscreen  keyboard-select  tabbedex
.vim/: .gitignore
.vim/UltiSnips/: algo.snippets  cpp.snippets  css.snippets  haskell.snippets  java.snippets  less-elements.snippets  less.snippets  pandoc.snippets
.vim/binary/: Makefile  ibus-disable.c
.vim/bundle/: ghcmod-vim  (+4 more)
.xmonad/: .gitignore  LICENSE  conkyrc  statusbar.sh  xmobar.hs  xmobar.rc  xmonad-conf-bjin.cabal  xmonad.hs
.xmonad/lib/: Monitor.hs  Screen.hs  XMonadBar.hs
.zsh/: .gitignore  00-env.zsh  01-alias.zsh  10-dircolors.zsh  20-history.zsh  env.zsh
(+55 files in other folders)
