name:                xmonad-conf-bjin
version:             0.1.0.0
synopsis:            My personal xmonad configuration
homepage:            https://github.com/bjin/dotfiles
license:             Apache-2.0
license-file:        LICENSE
author:              Bin Jin
maintainer:          bjin1990@gmail.com
copyright:           Bin Jin <bjin1990@gmail.com>
build-type:          Simple
cabal-version:       >=1.10

executable xmonad-bjin
  main-is:             xmonad.hs
  other-modules:       Monitor, Screen, XMonadBar
  other-extensions:    DeriveDataTypeable, OverloadedStrings
  build-depends:       alsa-mixer >=0.2
                     , base >=4.8
                     , colour >=2.3
                     , containers >=0.5
                     , deepseq >=1.4
                     , dzen-utils >=0.1
                     , libmpd >=0.9
                     , time >=1.5
                     , unix >=2.7
                     , utf8-string >=1.0
                     , wcwidth >=0.0
                     , X11 >=1.6
                     , xmonad >=0.11
                     , xmonad-contrib >=0.11
  hs-source-dirs:      . , lib
  default-language:    Haskell2010
